c/sokol_app.rs

pub type sapp_android_tooltype = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sapp_touchpoint {
    pub identifier: usize,
    pub pos_x: f32,
    pub pos_y: f32,
    pub android_tooltype: sapp_android_tooltype,
    pub changed: bool,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of sapp_touchpoint"][::std::mem::size_of::<sapp_touchpoint>() - 24usize];
    ["Alignment of sapp_touchpoint"][::std::mem::align_of::<sapp_touchpoint>() - 8usize];
    ["Offset of field: sapp_touchpoint::identifier"]
        [::std::mem::offset_of!(sapp_touchpoint, identifier) - 0usize];
    ["Offset of field: sapp_touchpoint::pos_x"]
        [::std::mem::offset_of!(sapp_touchpoint, pos_x) - 8usize];
    ["Offset of field: sapp_touchpoint::pos_y"]
        [::std::mem::offset_of!(sapp_touchpoint, pos_y) - 12usize];
    ["Offset of field: sapp_touchpoint::android_tooltype"]
        [::std::mem::offset_of!(sapp_touchpoint, android_tooltype) - 16usize];
    ["Offset of field: sapp_touchpoint::changed"]
        [::std::mem::offset_of!(sapp_touchpoint, changed) - 20usize];
};
pub const sapp_mousebutton_SAPP_MOUSEBUTTON_LEFT: sapp_mousebutton = 0;
pub const sapp_mousebutton_SAPP_MOUSEBUTTON_RIGHT: sapp_mousebutton = 1;
pub const sapp_mousebutton_SAPP_MOUSEBUTTON_MIDDLE: sapp_mousebutton = 2;
pub const sapp_mousebutton_SAPP_MOUSEBUTTON_INVALID: sapp_mousebutton = 256;
pub type sapp_mousebutton = ::std::os::raw::c_uint;
pub const SAPP_MODIFIER_SHIFT: _bindgen_ty_2 = 1;
pub const SAPP_MODIFIER_CTRL: _bindgen_ty_2 = 2;
pub const SAPP_MODIFIER_ALT: _bindgen_ty_2 = 4;
pub const SAPP_MODIFIER_SUPER: _bindgen_ty_2 = 8;
pub const SAPP_MODIFIER_LMB: _bindgen_ty_2 = 256;
pub const SAPP_MODIFIER_RMB: _bindgen_ty_2 = 512;
pub const SAPP_MODIFIER_MMB: _bindgen_ty_2 = 1024;
pub type _bindgen_ty_2 = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sapp_event {
    pub frame_count: u64,
    pub type_: sapp_event_type,
    pub key_code: sapp_keycode,
    pub char_code: u32,
    pub key_repeat: bool,
    pub modifiers: u32,
    pub mouse_button: sapp_mousebutton,
    pub mouse_x: f32,
    pub mouse_y: f32,
    pub mouse_dx: f32,
    pub mouse_dy: f32,
    pub scroll_x: f32,
    pub scroll_y: f32,
    pub num_touches: ::std::os::raw::c_int,
    pub touches: [sapp_touchpoint; 8usize],
    pub window_width: ::std::os::raw::c_int,
    pub window_height: ::std::os::raw::c_int,
    pub framebuffer_width: ::std::os::raw::c_int,
    pub framebuffer_height: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of sapp_event"][::std::mem::size_of::<sapp_event>() - 272usize];
    ["Alignment of sapp_event"][::std::mem::align_of::<sapp_event>() - 8usize];
    ["Offset of field: sapp_event::frame_count"]
        [::std::mem::offset_of!(sapp_event, frame_count) - 0usize];
    ["Offset of field: sapp_event::type_"][::std::mem::offset_of!(sapp_event, type_) - 8usize];
    ["Offset of field: sapp_event::key_code"]
        [::std::mem::offset_of!(sapp_event, key_code) - 12usize];
    ["Offset of field: sapp_event::char_code"]
        [::std::mem::offset_of!(sapp_event, char_code) - 16usize];
    ["Offset of field: sapp_event::key_repeat"]
        [::std::mem::offset_of!(sapp_event, key_repeat) - 20usize];
    ["Offset of field: sapp_event::modifiers"]
        [::std::mem::offset_of!(sapp_event, modifiers) - 24usize];
    ["Offset of field: sapp_event::mouse_button"]
        [::std::mem::offset_of!(sapp_event, mouse_button) - 28usize];
    ["Offset of field: sapp_event::mouse_x"][::std::mem::offset_of!(sapp_event, mouse_x) - 32usize];
    ["Offset of field: sapp_event::mouse_y"][::std::mem::offset_of!(sapp_event, mouse_y) - 36usize];
    ["Offset of field: sapp_event::mouse_dx"]
        [::std::mem::offset_of!(sapp_event, mouse_dx) - 40usize];
    ["Offset of field: sapp_event::mouse_dy"]
        [::std::mem::offset_of!(sapp_event, mouse_dy) - 44usize];
    ["Offset of field: sapp_event::scroll_x"]
        [::std::mem::offset_of!(sapp_event, scroll_x) - 48usize];
    ["Offset of field: sapp_event::scroll_y"]
        [::std::mem::offset_of!(sapp_event, scroll_y) - 52usize];
    ["Offset of field: sapp_event::num_touches"]
        [::std::mem::offset_of!(sapp_event, num_touches) - 56usize];
    ["Offset of field: sapp_event::touches"][::std::mem::offset_of!(sapp_event, touches) - 64usize];
    ["Offset of field: sapp_event::window_width"]
        [::std::mem::offset_of!(sapp_event, window_width) - 256usize];
    ["Offset of field: sapp_event::window_height"]
        [::std::mem::offset_of!(sapp_event, window_height) - 260usize];
    ["Offset of field: sapp_event::framebuffer_width"]
        [::std::mem::offset_of!(sapp_event, framebuffer_width) - 264usize];
    ["Offset of field: sapp_event::framebuffer_height"]
        [::std::mem::offset_of!(sapp_event, framebuffer_height) - 268usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sapp_range {
    pub ptr: *const ::std::os::raw::c_void,
    pub size: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of sapp_range"][::std::mem::size_of::<sapp_range>() - 16usize];
    ["Alignment of sapp_range"][::std::mem::align_of::<sapp_range>() - 8usize];
    ["Offset of field: sapp_range::ptr"][::std::mem::offset_of!(sapp_range, ptr) - 0usize];
    ["Offset of field: sapp_range::size"][::std::mem::offset_of!(sapp_range, size) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sapp_image_desc {
    pub width: ::std::os::raw::c_int,
    pub height: ::std::os::raw::c_int,
    pub cursor_hotspot_x: ::std::os::raw::c_int,
    pub cursor_hotspot_y: ::std::os::raw::c_int,
    pub pixels: sapp_range,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of sapp_image_desc"][::std::mem::size_of::<sapp_image_desc>() - 32usize];
    ["Alignment of sapp_image_desc"][::std::mem::align_of::<sapp_image_desc>() - 8usize];
    ["Offset of field: sapp_image_desc::width"]
        [::std::mem::offset_of!(sapp_image_desc, width) - 0usize];
    ["Offset of field: sapp_image_desc::height"]
        [::std::mem::offset_of!(sapp_image_desc, height) - 4usize];
    ["Offset of field: sapp_image_desc::cursor_hotspot_x"]
        [::std::mem::offset_of!(sapp_image_desc, cursor_hotspot_x) - 8usize];
    ["Offset of field: sapp_image_desc::cursor_hotspot_y"]
        [::std::mem::offset_of!(sapp_image_desc, cursor_hotspot_y) - 12usize];
    ["Offset of field: sapp_image_desc::pixels"]
        [::std::mem::offset_of!(sapp_image_desc, pixels) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sapp_icon_desc {
    pub sokol_default: bool,
    pub images: [sapp_image_desc; 8usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of sapp_icon_desc"][::std::mem::size_of::<sapp_icon_desc>() - 264usize];
    ["Alignment of sapp_icon_desc"][::std::mem::align_of::<sapp_icon_desc>() - 8usize];
    ["Offset of field: sapp_icon_desc::sokol_default"]
        [::std::mem::offset_of!(sapp_icon_desc, sokol_default) - 0usize];
    ["Offset of field: sapp_icon_desc::images"]
        [::std::mem::offset_of!(sapp_icon_desc, images) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sapp_allocator {
    pub alloc_fn: ::std::option::Option<
        unsafe extern "C" fn(
            size: usize,
            user_data: *mut ::std::os::raw::c_void,
        ) -> *mut ::std::os::raw::c_void,
    >,
    pub free_fn: ::std::option::Option<
        unsafe extern "C" fn(
            ptr: *mut ::std::os::raw::c_void,
            user_data: *mut ::std::os::raw::c_void,
        ),
    >,
    pub user_data: *mut ::std::os::raw::c_void,
}
